--- a/blog/app/views/layouts/application.html.erb
+++ b/blog/app/views/layouts/application.html.erb
@@ -7,6 +7,15 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  <div id="banner">
+    <div class="navigation_buttons">
+      <%= link_to 'Home', articles_path %>
+    </div>
+
+    <div class="title">
+      Hello Blog!
+    </div>
+  </div>
 
   <body>
     <%= yield %>
