--- a/blog/app/assets/stylesheets/application.scss
+++ b/blog/app/assets/stylesheets/application.scss
@@ -17,7 +17,9 @@
 #banner {
   background: #ed9155;
   border-bottom: 2px solid;
-  font: small-caps 40px/40px "Times New Roman", serif;
+  font-family: Georgia, serif;
+  font-size: 40px;
+  font-variant: small-caps;
   color: #ffffff;
   padding: 0.2em;
   text-align: center;
