--- a/blog/app/views/comments/_form.html.erb
+++ b/blog/app/views/comments/_form.html.erb
@@ -4,8 +4,9 @@
       <%= f.text_field :commenter %>
 
       <%= f.label :comment %>
-      <%= f.text_area :body %>
+      <%= f.text_area :body, cols: 50, rows: 5 %>
     </p>
+
     <p>
       <%= f.submit %>
     </p>
