--- a/todolist/app/views/projects/index.html.erb
+++ b/todolist/app/views/projects/index.html.erb
@@ -1,24 +1,28 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Projects</h1>
+<% @projects.each do |project| %>
+    <div>
+      <h1><%= project.name %></h1>
+        <%= link_to 'Edit', edit_project_path(project) %>
+        <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <br>
+      <% project.tasks.each do |task| %>
+          <div>
+            <%= task.name %>
+          </div>
+      <% end %>
+      <%= form_for([project, project.tasks.build]) do |f| %>
+          <p>
+            <%= f.text_area :name %>
+          </p>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          <p>
+            <%= f.submit %>
+          </p>
+      <% end %>
+    </div>
+    <br>
+<% end %>
 
 <br>
 
